--- a/index.html
+++ b/index.html
@@ -9,23 +9,38 @@
     <link rel="icon" type="image/png" href="image/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <section class="first-sec">
         <div class="half-width text-part">
-            <h1> <span> Skip </span> The Diet,Just Eat Healthy With Food Network.</h1>
-            <h5>Imagine you don't need a diet becouse we provide a healthy and delicious food for you! So just jump on
+            <h1 class="bigger"> <span> Skip </span> The Diet, <br> Just Eat Healthy <br> With Food Network</h1>
+            <p class="clr-deco">Imagine you don't need a diet becouse we provide a healthy and delicious food for you! So just jump on
                 it...
-            </h5>
-            <a class="ordr-btn" target="_blank" href="https://www.foodpanda.com.bd/?gclid=Cj0KCQjw24qHBhCnARIsAPbdtlJIacMI_dyQj1tfZ2ZIQeUAuCe2WMEgb-2C6XMZ5FbCHO4VDFoqhksaAo6oEALw_wcB">ORDER MEAL</a>
+            </p>
+            <a class="ordr-btn" target="_blank"
+                href="https://www.foodpanda.com.bd/?gclid=Cj0KCQjw24qHBhCnARIsAPbdtlJIacMI_dyQj1tfZ2ZIQeUAuCe2WMEgb-2C6XMZ5FbCHO4VDFoqhksaAo6oEALw_wcB">ORDER
+                MEAL</a>
         </div>
 
         <div class="half-width">
             <img src="image/Group 8425.png" alt="">
         </div>
+    </section>
+
+    <section class="secound-sec">
+        <div class="half-width image-part"> 
+            <img src=" image/Person Image.png" alt="">
+        </div>
+
+        <div class="half-width txt-prt">
+            <h1 class="bigger">About Us</h1>
+            <p class="pera-deco" > Hey there!We are founding you.We provide very healthy diet,as you like.We are searching such a beautiful people simply like you.</p>
+            <a class="cntac-btn" target="_blank" href="#">CONTACT US</a>
+        </div>
+
     </section>
 </body>
 
