--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <section class="first-sec">
         <div class="half-width text-part">
             <h1 class="bigger"> <span> Skip </span> The Diet, <br> Just Eat Healthy <br> With Food Network</h1>
-            <p class="clr-deco">Imagine you don't need a diet becouse we provide a healthy and delicious food for you! So just jump on
+            <p class="clr-deco">Imagine you don't need a diet becouse we provide a healthy and delicious food for you!
+                So just jump on
                 it...
             </p>
             <a class="ordr-btn" target="_blank"
@@ -31,18 +32,43 @@
     </section>
 
     <section class="secound-sec">
-        <div class="half-width image-part"> 
+        <div class="half-width image-part">
             <img src=" image/Person Image.png" alt="">
         </div>
 
         <div class="half-width txt-prt">
             <h1 class="bigger">About Us</h1>
-            <p class="pera-deco" > Hey there!We are founding you.We provide very healthy diet,as you like.We are searching such a beautiful people simply like you.</p>
+            <p class="pera-deco"> Hey there!We are founding you.We provide very healthy diet,as you like.We are
+                searching such a beautiful people simply like you.</p>
             <a class="cntac-btn" target="_blank" href="#">CONTACT US</a>
         </div>
 
     </section>
-    <h1 class="center">MY RACEPI</h1>
+    <h1 class="center">Our Recipies</h1>
+    <p class="about-us">We are so happy you’re here. We’re Adam and Joanne, the creators of Inspired Taste. Here you
+        will find easy recipes for home cooks that you will want to make again and again.</p>
+
+    <section class="thrd-sec">
+
+        <div class="box box1">
+            <img class="img1" src="image/Project-CoverA.jpg" alt="">
+            <h1>Recipe Title</h1>
+            <p>It is very testy food.You must test of this food.We made food very unique way to make it more testier.It is one of all. </p>
+        </div>
+
+        <div class="box box2">
+            <img class="img2" src="image/Project-Cover1.jpg" alt="">
+            <h1>Recipe Title</h1>
+            <p>It is very testy food.You must test of this food.We made food very unique way to make it more testier.It is one of all. </p>
+        </div>
+
+        <div class="box box3">
+            <img class="img3" src="image/Project-Cover.png" alt="">
+            <h1>Recipe Title</h1>
+            <p>It is very testy food.You must test of this food.We made food very unique way to make it more testier.It is one of all. </p>
+        </div>
+
+    </section>      
 </body>
 
 </html>
