--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
 </head>
 
 <body>
+
+    <header class="hdr">
+        <a class="taitle" href="#"> Food Network</a>
+        <nav>
+            <a href="#">HOME</a>
+            <a href="#">ABOUT US</a>
+            <a href="#">SURVICES</a>
+            <a href="#">CONTACT</a>
+        </nav>
+
+    </header>
+
     <section class="first-sec">
         <div class="half-width text-part">
-            <h1 class="bigger"> <span> Skip </span> The Diet, <br> Just Eat Healthy <br> With Food Network</h1>
+            <h1 class="bigger"><span>Skip </span> The Diet, <br> Just Eat Healthy <br> With Food Network</h1>
             <p class="clr-deco">Imagine you don't need a diet becouse we provide a healthy and delicious food for you!
                 So just jump on
                 it...
@@ -69,6 +81,27 @@
         </div>
 
     </section>      
+
+    <section class="fourth-sec">
+        <div class="dive">
+            <h1>700k</h1>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="dive">
+            <h1>2.4m</h1>
+            <p>Instragram Followers</p>
+        </div>
+        <div class="dive">
+            <h1>100k</h1>
+            <p>Dribble Shot Likes</p>
+        </div>
+    </section>
+
+    <footer>
+        <h1 class="bigger"> <span> Ahnaf</span> Food Network</h1>
+        <p>© Started 2021. All Rights Reserved</p>
+    </footer>
+
 </body>
 
 </html>
