--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 </head>
 
 <body>
-        
+
+    <nav>
+        <label class="logo">Food Network</label>
+        <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">SERVICES</a></li>
+            <li><a href="#">CONTACT</a></li>
+        </ul>
+    </nav>
 
     <section class="first-sec">
         <div class="half-width text-part">
@@ -55,22 +64,25 @@
         <div class="box box1">
             <img class="img1" src="image/Project-CoverA.jpg" alt="">
             <h1>Recipe Title</h1>
-            <p>It is very testy food.You must test of this food.We made food very unique way to make it more testier.It is one of all. </p>
+            <p>It is very testy food.You must test of this food.We made food very unique way to make it more testier.It
+                is one of all. </p>
         </div>
 
         <div class="box box2">
             <img class="img2" src="image/Project-Cover1.jpg" alt="">
             <h1>Recipe Title</h1>
-            <p>It is very testy food.You must test of this food.We made food very unique way to make it more testier.It is one of all. </p>
+            <p>It is very testy food.You must test of this food.We made food very unique way to make it more testier.It
+                is one of all. </p>
         </div>
 
         <div class="box box3">
             <img class="img3" src="image/Project-Cover.png" alt="">
             <h1>Recipe Title</h1>
-            <p>It is very testy food.You must test of this food.We made food very unique way to make it more testier.It is one of all. </p>
+            <p>It is very testy food.You must test of this food.We made food very unique way to make it more testier.It
+                is one of all. </p>
         </div>
 
-    </section>      
+    </section>
 
     <section class="fourth-sec">
         <div class="dive">
